added fonts locally

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Yewdio: Listen to YouTube as audio">
-  <link media="screen" href="https://api.fontshare.com/v2/css?f[]=satoshi@1&display=swap" rel="stylesheet">
+  <!-- <link media="screen" href="https://api.fontshare.com/v2/css?f[]=satoshi@1&display=swap" rel="stylesheet"> -->
   <title>Yewdio</title>
 </head>
 
