Minor performance fixes, added verfied badge in search results, layout improvements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Yewdio: Listen to YouTube as audio">
   <link rel="manifest" href="/manifest.json">
+  <link rel="preconnect" href="https://vid.priv.au/api/v1/">
   <title>Yewdio: Youtube-as-audio</title>
 </head>
 
