--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/icons/favicon-16x16.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#6929d7"/>
   <meta name="description" content="Yewdio: Listen to YouTube as audio">
   <link rel="manifest" href="/manifest.json">
   <link rel="preconnect" href="https://vid.priv.au/api/v1/">
