--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#6929d7"/>
   <meta name="description" content="Yewdio: Listen to YouTube as audio">
   <link rel="manifest" href="/manifest.json">
-  <link rel="preconnect" href="https://vid.priv.au/api/v1/">
+  <link rel="preconnect" href="https://invidious.private.coffee/api/v1/">
   <title>Yewdio: Youtube-as-audio</title>
 </head>
 
